--- a/release-notes/FAQ
+++ b/release-notes/FAQ
@@ -1,4 +1,4 @@
-== "JUG" - Java Uuid Generator ==
+== Java Uuid Generator ("JUG") ==
 
 
 === 1. Why JUG? Don't we already have "uuidgen"? ===
@@ -10,11 +10,11 @@ but not all do. Additionally, accessing uuidgen from Java
 may be tricky (since its location in native OS filesystem depends
 on OS and possibly other factors).
 
-So, portability is one benefit; Jug works if you have Java 1.2.
+So, portability is one benefit; JUG works if you have Java 1.2.
 
-Performance may be another benefit when using Jug from Java. Interfacing
+Performance may be another benefit when using JUG from Java. Interfacing
 to native functionality (either via uuidgen or directly to libuuigen)
-is likely to be slower than calling Jug methods, even if generation
+is likely to be slower than calling JUG methods, even if generation
 itself was faster.
 
 === 2. Why NOT use JUG? ===
@@ -25,21 +25,21 @@ generators don't produce same UUID. It's still unlikely to
 happen (due to clock sequence field etc), but potentially a
 problem. Uuidgen usually solves this by having a system-wide
 global lock to prevent possibility of using same timestamps;
-but with Java the best Jug can guarantee is that there's always
-max. 1 Jug instance per JVM; other JVMs may have their own copies.
+but with Java the best JUG can guarantee is that there's always
+max. 1 JUG instance per JVM; other JVMs may have their own copies.
 [note: in theory it would be possible to add native support for
 locking, for platforms that have locking functionality... but
 then it might also be easy to just use native uuidgen functionality
 as well]
 
 Note, though, that with random- and name-based methods multiple
-instance of Jug are not a problem; name-based methods base the
+instance of JUG are not a problem; name-based methods base the
 uniqueness on the name, not timing, and random-based method
 is based on quality of the random number generator. In latter case
 it all depends on how random one considers SecureRandom to be.
 
 Additionally, although generating UUIDs is straight-forward,
-Jug has not been extensively tested; it just seems to generate
+JUG has not been extensively tested; it just seems to generate
 unique UUIDs as is. :-)
 
 === 3. What is the fastest method to use for generating UUIDs? ===
@@ -47,7 +47,7 @@ unique UUIDs as is. :-)
 It depends on your system, random number generators used etc. etc.,
 but here are some quick test results from my work station (Ultra-60
 dual 450Mhz SparcII; JDK 1.3.1, default JIT == client)
-(measurements done using Jug command-line tool, generating 1000
+(measurements done using JUG command-line tool, generating 1000
 UUIDs for each type):
 
 Time-based:	0.03 msec / UUID
@@ -73,7 +73,7 @@ Finally, if performance _really_ is very important for you, there
 is a further complication when using time-based algorithm; Java's
 system clock has max. resolution of 1 millisecond, instead of 100ns
 required by UUID specification. This is solved by using additional
-counter (in Jug), but the downside is that for each separate
+counter (in JUG), but the downside is that for each separate
 Java 'time slice' (time period when system clock returns same
 timestamp) can produce at most 10000 UUIDs. If JDK on the platform
 does advance in 1 msec ticks, this is good enough for generating
@@ -158,7 +158,7 @@ timestamps could overlap.
 
 While this was unlikely to happen (due to
 additional randomness injected via clock sequence field eetc.), this
-potential problem can now be resolved in Jug 2.0 and onwards using
+potential problem can now be resolved in JUG 2.0 and onwards using
 external synchronization. UUIDGenerator can be configured with
 TimestampSynchronizer instances; the default implementation,
 FileBasedTimestampSynchronizer works by using 2 files that are used
